tests/jsx_pragma/line_comment_unknown_id_points_to_pragma_2.js
// @jsx Foo.baz
// error
var Bar = 123;
<Bar />;
